--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "mongoose": "^8.0.3",
     "morgan": "^1.10.1",
     "multer": "^2.0.2",
-    "pdf-lib": "^1.17.1"
+    "pdf-lib": "^1.17.1",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.3"
